# rag-eval-pubmed

./: .gitignore  LICENSE  README.md
cardiology/: corpus.yaml  metadata.json
corpus_specs/: cardiology.yaml  epidemiology.yaml  genetics.yaml  infectious_disease.yaml  neurology.yaml  oncology.yaml  pharmacology.yaml  psychiatry.yaml
epidemiology/: corpus.yaml  metadata.json
genetics/: corpus.yaml  metadata.json
infectious_disease/: corpus.yaml  metadata.json
neurology/: corpus.yaml  metadata.json
oncology/: corpus.yaml  metadata.json
pharmacology/: corpus.yaml  metadata.json
psychiatry/: corpus.yaml  metadata.json
scripts/: .env.example  Makefile  build_pubmed.py  download_papers.py  jats_parser.py  pmc_client.py  pyproject.toml
